@@ -3,7 +3,7 @@
   <parent>
     <artifactId>jetty-project</artifactId>
     <groupId>org.eclipse.jetty</groupId>
-    <version>10.0.13-SNAPSHOT</version>
+    <version>10.0.15-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -24,6 +24,7 @@
           <argLine>
             @{argLine} ${jetty.surefire.argLine}
             --add-modules org.eclipse.jetty.util.ajax
+            --add-reads org.eclipse.jetty.servlet=org.eclipse.jetty.logging
           </argLine>
         </configuration>
       </plugin>
